--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,11 @@ title: Project Name
 description: Brief project description
 theme: minima
 include: ['_pages']
+header_pages:
+  - _pages/about.md
+  - _pages/team.md
+  - _pages/news.md
+  - _pages/faq.md
+  - _pages/contact.md
+  - _pages/information.md
+  - _pages/activities.md
