--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,4 @@
-title: Project Name
-description: Brief project description
+title: ECLIPS 
+description: Elevated Childhood Lead Interagency Prevalence Study
 theme: minima
 include: ['_pages']
-header_pages:
-  - _pages/about.md
-  - _pages/team.md
-  - _pages/news.md
-  - _pages/faq.md
-  - _pages/contact.md
-  - _pages/information.md
-  - _pages/activities.md
