--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
-title: ECLIPS 
+title: Lead-safe Futures 
 description: Elevated Childhood Lead Interagency Prevalence Study
 theme: minima
 include: ['_pages']
+author:
+  name: "ECLIPS Team" 
