--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ description: Elevated Childhood Lead Interagency Prevalence Study
 theme: minima
 include: ['_pages']
 author:
-  name: "ECLIPS Team" 
+  name: ECLIPS Team
