--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,4 @@ title: Lead-safe Futures
 description: Elevated Childhood Lead Interagency Prevalence Study
 theme: minima
 include: ['_pages']
-author:
-  name: ECLIPS Team
+author: ECLIPS Team
