--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Lead-safe Futures 
 description: Elevated Childhood Lead Interagency Prevalence Study
-theme: minimal
+theme: minima
 include: ['_pages']
 author: ECLIPS Team
