--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,11 @@ description: Elevated Childhood Lead Interagency Prevalence Study
 theme: minima
 include: ['_pages']
 author: ECLIPS Team
+header_pages:
+  - faq.md
+  - information.md
+  - news.md
+  - activities.md
+  - resources.md
+  - team.md
+  - contact.md
